tests/test_proof/bad/output/no_vars-empty.catala_en.Proof
[RESULT] A.y: no two exceptions to ever overlap for this variable
[ERROR] A.y: this variable might return an empty error
 --> tests/test_proof/bad/no_vars-empty.catala_en
  | 
7 |   context y content integer
  |           ^
  + Test
[ERROR] Z3 generated the following counterexample:
  x : 1

[RESULT] A.x: no two exceptions to ever overlap for this variable
[RESULT] A.x: this variable never returns an empty error
